<resources>
    <string name="app_name">XFund</string>
    <string name="app_version">v1.0 (unreleased)</string>

    <!--  User-related Strings  -->
    <string name="user_display_name">Joshua</string>

    <!-- Fragment Title -->
    <string name="screen_title_home">Home</string>
    <string name="screen_title_community">Community</string>
    <string name="screen_title_projects">Projects</string>
    <string name="screen_title_profile">Profile</string>

    <!--  Form Helper  -->
    <string name="form_field_required">Required</string>
    <string name="required_more_than_50_characters">Required (More than 50 characters)</string>

    <!--  Testing Strings  -->
    <string name="community_item_1_title">I am strong.</string>
    <string name="community_item_1_desc">Please help me! Lorem Ipsum, this is a description, yes don\'t doubt. Yuppp, this is a description. Just to display this is a long description.</string>
    <string name="community_item_1_date">23-Aug-2023</string>

    <!-- Home Fragment -->
    <string name="welcome_user_title">Hi, %s</string>
    <string name="search_query_hint">Enter the project name</string>
    <string name="home_popular_fundraising_title">Popular Fundraising</string>
    <string name="category_label_nature">Nature</string>
    <string name="category_label_tech">Technology</string>
    <string name="category_label_food">Food</string>
    <string name="category_label_other">Other</string>


    <!-- Community: Add Discussion -->
    <string name="fragment_title_community">Add Discussion</string>
    <string name="title_label_txt">Title*</string>
    <string name="title_hint_txt">e.g. Do you prefer donate via subscription or one-time payment?</string>
    <string name="desc_label_txt">Description*</string>
    <string name="desc_hint_txt">Introduce the problem and expand on what you put in the title. Minimum 20 characters.</string>
    <string name="tags_label_txt">Tags (optional)</string>
    <string name="tags_hint_txt">Add up to 5 tags to describe what your question is about.</string>
    <string name="add_discussion_submit_button">Submit</string>
    <string name="add_new_discussion_btn_txt">Add</string>

    <string name="home_news_title">News</string>
    <string name="detail_discussion_comment_title">Comment</string>
    <string name="posted_discussion_edit_button">Edit</string>
    <string name="fragment_title_posted_community">Posted Discussions</string>

    <!-- Community: View Posted Discussion -->
    <string name="view_posted_community_empty">Sorry, no posted discussion found!</string>
    <string name="view_posted_community_link_to_add">Press here to add</string>

    <!-- Community: Discussion Detail -->
    <string name="fragment_title_community_detail">Discussion</string>

    <!--  Util  -->
    <string name="loading">Loading</string>


    <!-- Payment: Donation -->
    <string-array name="cardTypes">
        <item>AliPay</item>
        <item>ApplePay</item>
        <item>GooglePay</item>
        <item>PayPal</item>
        <item>Master Card</item>
        <item>Visa Card</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payment_title">One-time payment</string>
    <string name="payment_donation_label">Enter the donation amount</string>
    <string name="donation_sample_amount">RM 10</string>
    <string name="back_button">Click to direct previous activity/fragment</string>
    <string name="donation_thank_you_txt">Thank you for your support</string>
    <string name="payment_saved_card_label">Saved Cards</string>
    <string name="payment_change_card_link"><u>Card Setting</u></string>
    <string name="payment_donate_btn">Donate</string>
    <string name="saved_card_name">MasterCard</string>
    <string name="saved_card_no">Master-1234</string>
    <string name="payment_method_title">Payment Method</string>
    <string name="payment_method_header">Saved payment method</string>
    <string name="payment_method_header_new">Add Payment Method</string>
    <string name="payment_cardNo_input">Card Number</string>
    <string name="payment_cardNo_example">1234 5678 9876 5432</string>
    <string name="payment_expiry_input">Expiry Date</string>
    <string name="payment_cvv_input">CVV</string>
    <string name="payment_expiry_sample">MM/YY</string>
    <string name="payment_cvv_sample">3 digit</string>
    <string name="payment_thank_txt">Thank You!</string>
    <string name="payment_thankDesc_txt">Thank you so much for your donation.\nYour generosity means everything to us and to the community we serve.</string>
    <string name="payment_share_txt">Please share it with your friends to help us reach larger heart.</string>
    <string name="payment_shareIt_txt">Share with friends</string>
    <string name="payment_back_btn">Back to main menu</string>
    <string name="payment_addPay_txt">Add Method</string>
    <string name="payment_cardName_example">Ecas Gold Card</string>
    <string name="payment_cardName_txt">Card Name</string>
    <string name="payment_add_card_btn">+ Add Credit/Debit Card</string>
    <string name="payment_add_wallet_btn">+ Add Digital Wallet</string>
    <string name="payment_detail_name_label">Card Name</string>
    <string name="card_detail_no_label">Card Number</string>
    <string name="payment_detail_default_card">Set as Default Card</string>
    <string name="payment_detail_name_sample">Card Name Sample</string>
    <string name="payment_detail_no_sample">xxxxxxxxxxx1234</string>
    <string name="payment_detail_delete_txt">Delete</string>
    <string name="payment_method_detail_update">Update</string>
    <string name="payment_method_detail">Payment Method Detail</string>


    <!-- Project: project_list_card_cell -->
    <string name="add_percentage_behind">%s</string>
    <string name="fragment_title_edit_discussion">Edit Discussion</string>
    <string name="edit_discussion_update_button">Update</string>

    <!-- About Fragment -->
    <string name="fragment_about_title">About</string>

    <string name="MoneyPatternForProject">RM %s%.2f</string>
    <string name="Thousands">RM %sK</string>
    <string name="Millions">RM %sM</string>
    <string name="double_format">RM %s</string>

    <!-- Project: fragment_project_detail -->
    <string name="project_detail_from">\u00A0from\u00A0</string>
    <string name="project_detail_collected">Collected: </string>
    <string name="project_detail_donate">Donate</string>
    <string name="project_detail_share">Share</string>


    <!-- Project: fragment_admin_project -->
    <string name="admin_project_add">Add</string>

    <!-- Project: fragment_edit_project -->
    <string name="edit_project_fragment_title">Edit Project</string>
    <string name="edit_project_name">Name*</string>
    <string name="edit_project_desc">Description*</string>
    <string name="edit_project_cancel">Cancel</string>
    <string name="edit_project_update">Update</string>

    <!-- Project: fragment_add_project -->
    <string name="add_project_fragment_title">Add Project</string>
    <string name="add_project_fund_target">Fund Target*</string>
    <string name="add_project_start_date">Start Date*</string>
    <string name="community_empty">Sorry, no discussuion found!</string>


</resources>