<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.PaymentMethodFragment">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_width_margin"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/baseline_chevron_left_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/paymentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/screen_width_margin"
            android:text="@string/payment_method_header_new"
            android:textSize="@dimen/screen_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/backBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cardNameInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_width_margin"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="@dimen/screen_width_margin"
            android:hint="@string/payment_cardName_txt"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backBtn"
            app:placeholderText="@string/payment_cardName_example">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cardNameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="20" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cardNoInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_width_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/screen_width_margin"
            android:hint="@string/payment_cardNo_input"
            android:outlineProvider="none"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardNameInput"
            app:placeholderText="@string/payment_cardNo_example">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cardNoTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="16" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cardExpiryInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_width_margin"
            android:layout_marginTop="16dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/cardCvvInput"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardNoInput"
            app:placeholderText="@string/payment_expiry_sample">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cardExpiryTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/payment_expiry_input"
                android:inputType="phone"
                android:maxLength="5" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cardCvvInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/screen_width_margin"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cardExpiryInput"
            app:layout_constraintTop_toBottomOf="@+id/cardNoInput"
            app:placeholderText="@string/payment_cvv_sample">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cardCvvTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/payment_cvv_input"
                android:inputType="number"
                android:maxLength="3" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/addMethodBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="@dimen/payment_button_height"
            android:layout_marginStart="@dimen/screen_width_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/screen_width_margin"
            android:text="@string/payment_addPay_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardExpiryInput" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>