<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.community.AddDiscussionFragment">


    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_width_margin"
        android:layout_marginTop="24dp"
        android:background="#00FFFFFF"
        android:contentDescription="Back Button"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragmentTitle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/fragment_title_community"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleLblTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/form_screen_horizontal_margin"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/title_label_txt"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentTitle" />

    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/form_screen_horizontal_margin"
        android:layout_marginEnd="@dimen/form_screen_horizontal_margin"
        android:hint="@string/title_hint_txt"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleLblTxt" />

    <TextView
        android:id="@+id/descLblTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/form_screen_horizontal_margin"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/desc_label_txt"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTxt" />

    <EditText
        android:id="@+id/descTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/form_screen_horizontal_margin"
        android:layout_marginEnd="@dimen/form_screen_horizontal_margin"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/desc_hint_txt"
        android:inputType="textMultiLine"
        android:textSize="11sp"
        android:autofillHints="Discussion Description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descLblTxt" />

    <TextView
        android:id="@+id/tagsLblTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/form_screen_horizontal_margin"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/tags_label_txt"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descTxt" />

    <TextView
        android:id="@+id/tagsTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/form_screen_horizontal_margin"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="@dimen/form_screen_horizontal_margin"
        android:hint="@string/tags_hint_txt"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagsLblTxt" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/form_screen_horizontal_margin"
        android:layout_marginTop="26dp"
        android:text="@string/add_discussion_submit_button"
        android:textSize="11sp"
        android:visibility="visible"
        app:cornerRadius="@dimen/add_discussion_submit_button_radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagsTxt" />
</androidx.constraintlayout.widget.ConstraintLayout>